--- a/src/main/resources/templates/inquiry/list.html
+++ b/src/main/resources/templates/inquiry/list.html
@@ -18,9 +18,10 @@
             <thead>
             <tr>
                 <th>구분</th>
-                <th class="title">제목</th>
+                <th>제목</th>
                 <th>작성자</th>
                 <th>생성시간</th>
+                <th>수정시간</th>
                 <th>조회수</th>
                 <th>≖‿≖</th>
             </tr>
@@ -28,11 +29,10 @@
             <tbody>
             <tr th:each="inquiry: ${inquiryList}">
                 <td th:text="${inquiry.inqType}"></td>
-                <td th:text="${inquiry.inquiryTitle}" class="title">
-                    <a th:href="@{/inquiry/detail/{id}(id=${inquiry.inqId})}"></a> <!--이거 인식이 안됨-->
-                </td>
-                <td th:text="${inquiry.inqWriter}"></td>
-                <td th:text="${#temporals.format(inquiry.createTime, 'yyyy-MM-dd')}"></td>
+                <td th:text="${inquiry.inquiryTitle}"></td>
+                <td th:text="${inquiry.inquiryWriter}"></td>
+                <td th:text="${#temporals.format(inquiry.CreateTime, 'yyyy.MM.dd')}"></td>
+                <td th:text="${#temporals.format(inquiry.UpdateTime, 'yyyy.MM.dd')}"></td>
                 <td th:text="${inquiry.inqHit}"></td>
                 <td><a th:href="@{/inquiry/detail/{id}(id=${inquiry.inqId})}">상세보기</a></td>
             </tr>
@@ -81,8 +81,9 @@
                 <select name="select" id="select">
                     <option th:value="''">전체</option>
                     <option th:value="title">제목</option>
+                    <option th:value="writer">작성자</option>
                 </select>
-                <input type="text" name="search" id="search" th:value="${param.search}">
+                <input type="text" name="search" id="search" th:value="${param.search}" placeholder="검색어를 입력하세요">
                 <input type="submit" value="검색">
             </form>
         </div>
