--- a/src/main/resources/static/css/notice/detail.css
+++ b/src/main/resources/static/css/notice/detail.css
@@ -13,7 +13,7 @@
     box-sizing: border-box;
 }
 .container .detail .detail-con{
-    flex-basis: 1400px;
+    flex-basis: 1000px;
     padding: 20px;
     box-sizing: border-box;
     display: flex;
@@ -38,21 +38,23 @@
 }
 .container .detail .detail-con .board-con>ul>li{
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
     gap: 5px;
 }
 .container .detail .detail-con .board-con>ul>li span{
     line-height: 20px;
     padding: 5px 10px;
+    text-align: center;
 }
 .container .detail .detail-con .board-con>ul>li span:nth-child(1){
     flex:1;
-    background-color: #e5e0ff;
+    background-color: #C7D3F4;
     font-size: 15px;
     font-weight: bold;
 }
 .container .detail .detail-con .board-con>ul>li span:nth-child(2){
-    border: 1px solid #e5e0ff;
+    border: 1px solid #C7D3F4;
     flex:3;
 }
 .container .detail .detail-con .board-con>ul>li a{
@@ -61,9 +63,9 @@
     padding: 3px 0;
     font-size: 15px;
     transition: all 0.2s;
-    background-color: #e5e0ff;
+    background-color: #C7D3F4;
 }
 .container .detail .detail-con .board-con>ul>li a:hover{
-    background-color: #7286D3;
+    background-color: #AABDEF;
     color: #ffffff;
 }
