--- a/src/main/resources/static/css/notice/searchlist.css
+++ b/src/main/resources/static/css/notice/searchlist.css
@@ -1,7 +1,6 @@
 @import url(/css/common/reset.css);
 @import url(/css/common/cream_header.css);
 @import url(/css/common/footer.css);
-/*수정수정*/
 .List{
     width: 100%;
     display: flex;
@@ -22,6 +21,14 @@
     display: flex;
     justify-content: space-between;
 }
+.List .List-con .List-title .title table {
+    border-top: none;
+}
+.List .List-con .List-title .title table tr td{
+    font-weight: bold;
+    border-top: none;
+    border-bottom: 2px solid #7286D3;
+}
 .List .List-con .type{
     display: flex;
     box-sizing: border-box;
@@ -40,25 +47,18 @@
     height: 50px;
     display: flex;
     flex: 2;
+    justify-content: space-between;
     text-align: center;
     padding: 10px;
-    border: 1px solid #8C9CDB;
-    border-radius: 10px;
+    border: 1px solid #cccccc;
+    border-radius: 20px;
     box-sizing: border-box;
-    /* box-shadow: 2px 1px 1px #8C9CDB; */
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
-.List .List-con .type >ul>li span{
-    vertical-align: middle;
-    display: table-cell;
-    padding: 20px;
-    text-align: center;
+    box-shadow: 5px #cccccc;
     align-items: center;
 }
 .List .List-con .type >ul>li a{
-  font-size:20px;
+  font-size:25px;
+  font-weight:bold;
   align-items: center;
 }
 table, th, td{
@@ -86,49 +86,4 @@ table, th, td{
 }
 .List .List-con table tbody tr td .title{
     text-align: left;
-}
-.List .List-con .page{
-    padding: 10px 0;
-    box-sizing: borer-box;
-    display: flex;
-    justify-content: center;
-}
-.List .List-con .page >ul{
-    flex-basis: 400px;
-    display: flex;
-    justify-content: space-between;
-    gap: 5px;
-    padding: 5px;
-    box-sizing: border-box;
-}
-.List .List-con .page >ul>li{
-}
-.List .List-con .page >ul>li.block{
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    gap: 5px;
-}
-.List .List-con .page > ul> li.block a{
-    font-weight:bold;
-    padding:0 10px;
-    display:block;
-}
-.List .List-con .page > ul> li span{
-   font-size:12px;
-}
-.List .List-con .page > ul> li a{
-  font-size:12px;
-  font-weight:bold;
-}
-.List .List-con .page > ul> li span.span0{
-  color: #4E815F;
-  font-weight:bold;
-  padding:2px 10px;
-  border-radius:5px;
-}
-.List .List-con .pages > ul> li span a.span1{
-  padding:2px 10px;
-  font-weight: bold;
-  color: #4E815F;
 }
