--- a/src/main/resources/templates/notice/detail.html
+++ b/src/main/resources/templates/notice/detail.html
@@ -23,7 +23,11 @@
                     </li>
                     <li>
                         <span>작성날짜</span>
-                        <span th:text="${noticeDto.createTime}"></span> <!--?-->
+                        <span th:text="${#temporals.format(noticeDto.CreateTime,'yyyy년 MM월 dd일 hh시 mm분')}"></span>
+                    </li>
+                    <li>
+                        <span>수정날짜</span>
+                        <span th:text="${#temporals.format(noticeDto.UpdateTime,'yyyy년 MM월 dd일 hh시 mm분')}"></span>
                     </li>
                     <li>
                         <span>조회수</span>
