img error, yml error update

--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -39,8 +39,8 @@
             <div class="gnb">
                 <ul>
                     <li><a th:href="@{/}">Cloth Keeper</a></li>
-                    <li><a th:href="@{/}">?</a></li>
-                    <li><a th:href="@{/}">?</a></li>
+                    <li><a th:href="@{/}">1</a></li>
+                    <li><a th:href="@{/}">2</a></li>
                     <li><a th:href="@{/}">상의</a></li>
                     <li><a th:href="@{/}">하의</a></li>
                     <li><a th:href="@{/}">악세사리</a></li>
