--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,16 +24,13 @@
                     </div>
                     <div class="section-sec2">
                         <div class="con">
-                            <div class="sub1">
+                            <div class="main-img-slider">
                                 <ul>
-                                    <li>1</li>
-                                    <li>2</li>
-                                    <li>3</li>
-                                    <li>4</li>
-                                    <li>5</li>
-                                    <li>6</li>
-                                    <li>7</li>
-                                    <li>8</li>
+                                    <li><img th:src="@{images/mainSilderImg/main-silder-item1.jpg}" alt="no Img" /></li>
+                                    <li><img th:src="@{images/mainSilderImg/main-silder-item2.jpg}" alt="no Img" /></li>
+                                    <li><img th:src="@{images/mainSilderImg/main-silder-item3.jpg}" alt="no Img" /></li>
+                                    <li><img th:src="@{images/mainSilderImg/main-silder-item4.jpg}" alt="no Img" /></li>
+                                    <li><img th:src="@{images/mainSilderImg/main-silder-item5.jpg}" alt="no Img" /></li>
                                 </ul>
                             </div>
                             <div class="sub2">
