--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -40,7 +40,9 @@
                 <ul>
                     <li><a th:href="@{/}">Cloth Keeper</a></li>
                     <li><a th:href="@{/}">1</a></li>
+<!--                    조회순으로-->
                     <li><a th:href="@{/}">2</a></li>
+<!--                    랜덤하게-->
                     <li><a th:href="@{/}">상의</a></li>
                     <li><a th:href="@{/}">하의</a></li>
                     <li><a th:href="@{/}">악세사리</a></li>
