--- a/src/main/resources/static/css/notice/list.css
+++ b/src/main/resources/static/css/notice/list.css
@@ -1,5 +1,5 @@
 @import url(/css/common/reset.css);
-@import url(/css/common/cream_header.css);
+@import url(/css/common/header.css);
 @import url(/css/common/footer.css);
 /*수정수정*/
 .List{
@@ -21,6 +21,41 @@
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
+    border-bottom: 2px solid #7285d3a4;
+}
+.List .List-con .search{
+    box-sizing: border-box;
+    /* line-height: 20px; */
+}
+.List .List-con .search form{
+    border: 1px solid #7285d3;
+    border-radius: 10px;
+    height: 30px;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    box-sizing: border-box;
+}
+.List .List-con .search form .select{
+    width: 40px;
+
+    -o-appearance: none;
+}
+.List .List-con .search form input:focus{
+    outline: none;
+}
+.List .List-con .search form input:nth-child(1){
+    flex: 5;
+    border: 0;
+    padding: 0 10px;
+}
+.List .List-con .search form input:nth-child(2){
+    flex: 1;
+    border: 0;
+    padding: 0 10px;
+    border-radius: 10%;
+    width: 25px;
+    height: 25px;
 }
 .List .List-con .type{
     display: flex;
@@ -67,6 +102,7 @@ table, th, td{
     border-left: none;
     border-right: none;
     text-align: center;
+    empty-cells: hide;
 }
 .List .List-con table{
     width: 100%;
