--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -19,17 +19,16 @@
         </div>
         <div class="middle-nav">
             <h1>
-                <a th:href="@{/}"><img th:src="@{/images/logo.png}" alt="HOME"></a>
+                <a th:href="@{/}"><img th:src="@{/images/logo3.png}" alt="HOME"></a>
             </h1>
             <div class="middle-menu">
                 <ul>
                     <li><a th:href="@{/}">HOME</a></li>
                     <li><a th:href="@{/}">SHOP</a></li>
-                    <li><a th:href="@{/}"><img th:src="@{/images/zoom.png}" alt="zoom"></a></li>
-                    <li>
+                   <li>
                         <form th:action="@{/}">
-                            <input type="text"name="search" id="search" placeholder="검색어를 입력하세요">
-                            <input type="button" value="검색">
+                            <input type="text" name="search" id="search" placeholder="검색어를 입력하세요">
+                            <input type="image" onclick="alert('검색')" th:src="@{/images/zoom.png}">
                         </form>
                     </li>
                 </ul>
