--- a/src/main/resources/static/css/common/header.css
+++ b/src/main/resources/static/css/common/header.css
@@ -118,4 +118,20 @@
   font-weight: bold;
   color: #8F7AFF;
  }
- 
+
+ /*search bar*/
+ .searchBar {
+   width: 300px;
+   height: 32px;
+   font-size: 15px;
+   border: 0;
+   border-radius: 15px;
+   outline: none;
+   padding-left: 10px;
+   background-color: rgb(233, 233, 233);
+ }
+
+ .serarchBtn{
+  border: 0;
+  background-color: transparent;
+ }
