--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -25,11 +25,13 @@
                 <ul>
                     <li><a th:href="@{/}">HOME</a></li>
                     <li><a th:href="@{/}">SHOP</a></li>
-                    <li><a th:href="@{/}"><img th:src="@{/images/zoom.png}" alt="zoom"></a></li>
+                    <li><a href=""></a></li>
                     <li>
                         <form th:action="@{/}">
-                            <input type="text"name="search" id="search" placeholder="검색어를 입력하세요">
-                            <input type="button" value="검색">
+                            <input type="text"name="searchBar" id="searchBar" placeholder="검색어를 입력하세요">
+                            <button class="serarchBtn">
+                                <input type="image" src="images/main/mainIcon/main-search-icon.png" alt="no img" value="검색">
+                            </button>
                         </form>
                     </li>
                 </ul>
