--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,27 +18,19 @@
         <div class="index">
             <div class="index-con">
                 <div class="sections">
-                    <div class="section-sec1">
-                        <div class="con">
-                            AUTOGALLERY
-                        </div>
-                    </div>
-                    <div class="section-sec2">
+                    <div class="section-sec">
                         <div class="con">
                             <div id="slideShow">
                                 <ul class="slides">
-                                    <li><img src="images/mainSilderImg/main-silder-item1.jpg" alt="no img"></li>
-                                    <li><img src="images/mainSilderImg/main-silder-item2.jpg" alt="no img"></li>
-                                    <li><img src="images/mainSilderImg/main-silder-item3.jpg" alt="no img"></li>
-                                    <li><img src="images/mainSilderImg/main-silder-item4.png" alt="no img"></li>
-                                    <li><img src="images/mainSilderImg/main-silder-item5.jpg" alt="no img"></li>
+                                    <li><img src="images/main/mainSilderImg/main-silder-item1.jpg" alt="no img"></li>
+                                    <li><img src="images/main/mainSilderImg/main-silder-item2.jpg" alt="no img"></li>
+                                    <li><img src="images/main/mainSilderImg/main-silder-item3.jpg" alt="no img"></li>
+                                    <li><img src="images/main/mainSilderImg/main-silder-item4.png" alt="no img"></li>
+                                    <li><img src="images/main/mainSilderImg/main-silder-item5.jpg" alt="no img"></li>
                                 </ul>
                                 <p class="controller">
-
-                                    <!-- &lang: 왼쪽 방향 화살표
-                                    &rang: 오른쪽 방향 화살표 -->
-                                    <span class="prev">&lang;</span>
-                                    <span class="next">&rang;</span>
+                                    <span class="prev"><img src="images/mainSilderImg/main-silder-right.png" alt="no img"></span>
+                                    <span class="next"><img src="images/main//mainSilderImg/main-slider-left.png" alt="no img"></span>
                                 </p>
                             </div>
                             <div class="sub2">
