--- a/src/main/resources/templates/notice/searchlist.html
+++ b/src/main/resources/templates/notice/searchlist.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/notice/searchlist.css}">
 </head>
 <body>
-<div th:replace="~{fragments/common/kreamHeader :: headerFragment}"></div>
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
 <div class="List">
     <div class="List-con">
         <div class="List-title">
