--- a/src/main/resources/static/css/common/header.css
+++ b/src/main/resources/static/css/common/header.css
@@ -98,7 +98,7 @@
 .header .nav .middle-nav .middle-menu ul>li:last-child form input:nth-child(1){
     flex: 5;
     border: 0;
-    padding: 0 10px;
+    padding: 0 0 0 10px;
 }
 .header .nav .middle-nav .middle-menu ul>li:last-child form input:nth-child(2){
     flex: 1;
