--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" th:href="@{/css/main/mainSlider.css}">
 </th:block>
 <th:block layout:fragment="script">
-      <script th:src="@{/js/main/mainSlider.js}" defer></script>
+    <script th:src="@{/js/main/mainSlider.js}" defer></script>
 </th:block>
 <th:block layout:fragment="container">
     <div class="container">
@@ -29,20 +29,85 @@
                                     <li><img src="images/main/mainSilderImg/main-silder-item5.jpg" alt="no img"></li>
                                 </ul>
                                 <p class="controller">
-                                    <span class="prev"><img src="images/mainSilderImg/main-silder-right.png" alt="no img"></span>
-                                    <span class="next"><img src="images/main//mainSilderImg/main-slider-left.png" alt="no img"></span>
+                                    <span class="prev"><img src="images/main/mainSilderImg/main-slide-left.png"
+                                                            alt="no img"></span>
+                                    <span class="next"><img src="images/main/mainSilderImg/main-slide-right.png"
+                                                            alt="no img"></span>
                                 </p>
                             </div>
-                            <div class="sub2">
-
-                            </div>
-                            <div class="sub3">
-
-                            </div>
-                            <div class="sun4">
-
-                            </div>
                         </div>
+                    </div>
+                    <div class="section-sec2">
+                        <div class="sec2-title">
+                            <span>sec2-title(상의)</span>
+                        </div>
+                        <ul>
+                            <li>
+                                <div class="top-sec">
+                                    <img src="" alt="no img">
+                                </div>
+                                <div class="bottom-sec">
+                                    <div class="title">
+                                        대충 제목
+                                    </div>
+                                    <div class="price">
+                                        대충 가격
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="top-sec">
+                                    <img src="" alt="no img">
+                                </div>
+                                <div class="bottom-sec">
+                                    <div class="title">
+                                        대충 제목
+                                    </div>
+                                    <div class="price">
+                                        대충 가격
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="top-sec">
+                                    <img src="" alt="no img">
+                                </div>
+                                <div class="bottom-sec">
+                                    <div class="title">
+                                        대충 제목
+                                    </div>
+                                    <div class="price">
+                                        대충 가격
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="top-sec">
+                                    <img src="" alt="no img">
+                                </div>
+                                <div class="bottom-sec">
+                                    <div class="title">
+                                        대충 제목
+                                    </div>
+                                    <div class="price">
+                                        대충 가격
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                        <!--<ul>
+                            <li>item1</li>
+                            <li>item1</li>
+                            <li>item1</li>
+                            <li>item1</li>
+                            <li>item1</li>
+                            <li>item1</li>
+                            <li>item1</li>
+                            <li>item1</li>
+                            <li>item1</li>
+                            <li>item1</li>
+                        </ul>-->
+
                     </div>
                 </div>
             </div>
